Workaround for https://issues.sonatype.org/browse/OSSRH-66257